--- a/public/stat220/Day8.html
+++ b/public/stat220/Day8.html
@@ -516,6 +516,7 @@ BP_long2
 ```
 ]
 
+.footnote[[`readr` cheat sheet]https://deepbas.io/cheatsheets/readr.pdf)]
 
 ---
 
@@ -598,7 +599,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_00b2dd10" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_e9db1599" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -651,6 +652,7 @@ class: middle
 
 
 ```r
+library(lubridate)
 complex_dates &lt;- tibble(
   name = c("Yi", "Mo", "Dee"),
   dob = c("31-October-1952 14:30:15",
@@ -661,7 +663,8 @@ complex_dates &lt;- tibble(
 complex_dates %&gt;%
   mutate(
     dob_date = dmy_hms(dob),
-  ) %&gt;% knitr::kable()
+  ) %&gt;% 
+  knitr::kable()  # to make nice tables
 ```
 
 &lt;table&gt;
@@ -709,8 +712,9 @@ complex_dates %&gt;%
     dob_date = dmy_hms(dob),
     dob_year = year(dob_date),
     time_since_birth = interval(dob_date, now()),
-    age_exact = as.duration(time_since_birth) / dyears(1),
-  ) %&gt;% knitr::kable()
+    age_exact = time_length(time_since_birth, unit = "years")
+  ) %&gt;%
+  knitr::kable()
 ```
 
 &lt;table&gt;
@@ -730,24 +734,24 @@ complex_dates %&gt;%
    &lt;td style="text-align:left;"&gt; 31-October-1952 14:30:15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 1952-10-31 14:30:15 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1952 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1952-10-31 14:30:15 UTC--2024-01-19 01:45:07 UTC &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 71.21552 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1952-10-31 14:30:15 UTC--2024-01-19 02:36:08 UTC &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 71.21722 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Mo &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 12-Jan-1984 22:15:00 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 1984-01-12 22:15:00 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1984 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1984-01-12 22:15:00 UTC--2024-01-19 01:45:07 UTC &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 40.01683 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1984-01-12 22:15:00 UTC--2024-01-19 02:36:08 UTC &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 40.01689 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Dee &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 02-Feb-2002 10:45:30 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 2002-02-02 10:45:30 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2002 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2002-02-02 10:45:30 UTC--2024-01-19 01:45:07 UTC &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 21.95927 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 2002-02-02 10:45:30 UTC--2024-01-19 02:36:08 UTC &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 21.96071 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -764,11 +768,11 @@ class: middle
 
 ```r
 # Components of date and time
-year_component &lt;- 2023
-month_component &lt;- 3
-day_component &lt;- 23
-hour_component &lt;- 18
-minute_component &lt;- 45
+year_component &lt;- 2024
+month_component &lt;- 1
+day_component &lt;- 19
+hour_component &lt;- 9
+minute_component &lt;- 03
 second_component &lt;- 30
 ```
 ]
@@ -790,113 +794,13 @@ date_time_object &lt;- make_datetime(
 
 
 ```r
-date_time_object %&gt;% knitr::kable()
+date_time_object 
+[1] "2024-01-19 09:03:30 UTC"
 ```
-
-&lt;table&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:left;"&gt; x &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; 2023-03-23 18:45:30 &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
-
-
-
----
-
-# Combining Date and Time Objects
-
-
-```r
-date_only &lt;- ymd("2023-03-23")
-time_only &lt;- hms("18:45:30")
-
-date_time_combined &lt;- make_datetime(
-  year = year(date_only),
-  month = month(date_only),
-  day = day(date_only),
-  hour = hour(time_only),
-  min = minute(time_only),
-  sec = second(time_only)
-)
-
-date_time_combined %&gt;% knitr::kable()
-```
-
-&lt;table&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:left;"&gt; x &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; 2023-03-23 18:45:30 &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
-
-
-
 
 ---
 
 class: middle
-
-# Extracting Components from Date-Time Objects
-
-
-```r
-date_components &lt;- tibble(
-  date_time = ymd_hms("2023-03-23 18:45:30")
-)
-
-date_components %&gt;%
-  mutate(
-    year = year(date_time),
-    month = month(date_time, label = TRUE),
-    day = day(date_time),
-    hour = hour(date_time),
-    minute = minute(date_time),
-    second = second(date_time)
-  ) %&gt;% knitr::kable()
-```
-
-&lt;table&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:left;"&gt; date_time &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; year &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; month &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; day &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; hour &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; minute &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; second &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; 2023-03-23 18:45:30 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2023 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Mar &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 23 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 18 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 45 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 30 &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
-
-
-
----
-
 
 # Advanced Date-Time Arithmetic with Periods
 
@@ -904,15 +808,16 @@ date_components %&gt;%
 
 ```r
 date_periods &lt;- tibble(
-  date = ymd("2023-01-31")
+  date = ymd("2024-01-13", "2024-03-06", "2025-06-30")
 )
 
 date_periods %&gt;%
   mutate(
-    add_month = date + month(1),
-    add_year = date + years(1),
-    subtract_week = date - weeks(1)
-  ) %&gt;% knitr::kable()
+    add_month = date %m+% months(1), # not
+    add_year = date %m+% years(1),
+    subtract_week = date %m-% weeks(1)
+  ) %&gt;% 
+  knitr::kable()
 ```
 
 &lt;table&gt;
@@ -926,10 +831,22 @@ date_periods %&gt;%
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; 2023-01-31 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 2023-02-01 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 2024-01-31 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 2023-01-24 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2024-01-13 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2024-02-13 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2025-01-13 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2024-01-06 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; 2024-03-06 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2024-04-06 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2025-03-06 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2024-02-28 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; 2025-06-30 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2025-07-30 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2026-06-30 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2025-06-23 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -945,18 +862,19 @@ date_periods %&gt;%
 
 ```r
 time_diff_example &lt;- tibble(
-  start_date = ymd("2023-01-01"),
-  end_date = ymd("2023-12-31")
+  start_date = ymd("2024-01-03"),
+  end_date = ymd("2024-03-17")
 )
 
 time_diff_example %&gt;%
   mutate(
     time_diff = end_date - start_date,
-    duration_days = as.duration(time_diff),
-    duration_weeks = duration_days / dweeks(1),
-    duration_months = duration_days / dmonths(1),
-    duration_years = duration_days / dyears(1)
-  )  %&gt;% knitr::kable()
+    duration_days = time_length(time_diff, unit = "days"),
+    duration_weeks = as.duration(time_diff) / dweeks(1),
+    duration_months = as.duration(time_diff) / dmonths(1),
+    duration_years = as.duration(time_diff) / dyears(1)
+  )  %&gt;% 
+  knitr::kable()
 ```
 
 &lt;table&gt;
@@ -973,13 +891,13 @@ time_diff_example %&gt;%
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; 2023-01-01 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 2023-12-31 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 364 days &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 31449600s (~52 weeks) &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 52 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 11.95893 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 0.9965777 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2024-01-03 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2024-03-17 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 74 days &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 74 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 10.57143 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 2.431211 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.202601 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -1006,7 +924,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_4115b010" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_005b5ac5" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
