--- a/static/stat220/Day10.html
+++ b/static/stat220/Day10.html
@@ -48,7 +48,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- January 23 2024
+ January 24 2024
 
 ---
 
@@ -299,7 +299,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_8ab238e0" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_99d1d9c4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -8860,7 +8860,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_8eb162f8" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_3898594c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
