--- a/public/stat220/Day15.html
+++ b/public/stat220/Day15.html
@@ -47,11 +47,10 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- January 24 2024
+ February 06 2024
 
 ---
 
-class: middle
 
 # Why repeat ourselves?
 
@@ -104,6 +103,9 @@ mean(tinydata$z)
 
 ]
 
+--
+
+.out-t[It would be nice to iterate this process so that the same function/operation can be ran multiple times]
 
 ---
 
@@ -144,7 +146,7 @@ the `for()` function is used to specify
 
 
 ```
-for( i  in  items  )
+for( i  in  items)
      ^        ^
      |        |
      |        |___ object we are drawing from
@@ -393,9 +395,9 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_7d6bc4f6" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_05dc5f74" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 
@@ -500,7 +502,7 @@ $z
 class: middle
 
 
-# `map`
+# `purrr::map`
 
 &gt; In `purrr`, the `map` function is equivalent to `lapply`
 
@@ -546,7 +548,7 @@ sapply(tinydata, FUN = mean)
 class: middle
 
 
-# `map_dbl`
+# `purrr::map_dbl`
 
 &gt; `map_dbl` is equivalent to `sapply`
 
@@ -564,7 +566,7 @@ map_dbl(tinydata, .f = mean)
 class: middle
 
 
-# `map_df`
+# `purrr::map_df`
 
 &gt; `map_df` returns a data frame instead of a vector
 
@@ -630,7 +632,7 @@ $z
 class: middle
 
 
-# map_df
+# `purrr:::map_df`
 
 &gt; In `purrr`, the `map_df` is equal to `lapply` + `bind_cols`:
 
@@ -810,7 +812,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_e12248d2" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_8120c70c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
