--- a/static/stat120/Day15.html
+++ b/static/stat120/Day15.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- October 13 2023
+ February 06 2024
 
 
 ---
@@ -81,7 +81,7 @@ class: middle
 
 &lt;br&gt;
 
-.bql.font80[
+.bq.font80[
 Distribution for 
 - individual measurements in population (for a quantitative variable)
 - Sampling distribution for a statistic
@@ -125,10 +125,11 @@ The normal model parameters are
 
 &lt;img src="Day15_files/figure-html/unnamed-chunk-2-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
 
+--
 
 &lt;center&gt;
 &lt;div style="position: absolute; top: 20%; left: 70%;"&gt;
-&lt;span style="content: '\2192'; font-size: 20px; color: #FF00FF; text-align: center; white-space: pre-line;"&gt;
+&lt;span style="content: '\2192'; font-size: 20px; color: #FFFFFF; text-align: center; white-space: pre-line;"&gt;
   &lt;p&gt;&lt;strong&gt;Area under the curve &lt;br&gt; for scores 650 &amp; higher&lt;/strong&gt;&lt;/p&gt;
 &lt;/span&gt;
 &lt;/div&gt;
@@ -144,7 +145,7 @@ The normal model parameters are
 .bq.font80[
 - The curve represents the normal distribution, denoted by `\(N(\mu, \sigma)\)`. 
 
-- .red[(CALCULUS!)] Calculating the exact area requires integration, as given by the formula: 
+- .red[(CALCULUS!!)] Calculating the exact area requires integration, as given by the formula: 
 
  Area `\(=\int_a^b \frac{1}{\sqrt{2 \pi \sigma}} e^{-\frac{(x-\mu)^2}{2 \sigma^2}} d x\)`
  
@@ -157,13 +158,35 @@ The normal model parameters are
 
 ]
 
+--
+
+&lt;center&gt;
+&lt;div style="position: absolute; top: 5%; left: 70%;"&gt;
+&lt;span style="content: '\2192'; font-size: 20px; color: #FF00FF; text-align: center; white-space: pre-line;"&gt;
+  &lt;p&gt;&lt;strong&gt;Gray area is the &lt;br&gt; area between a and b&lt;/strong&gt;&lt;/p&gt;
+&lt;/span&gt;
+&lt;/div&gt;
+&lt;/center&gt;
+
+
 
 ---
 
-# [StatKey](https://www.lock5stat.com/StatKey/) – Verbal SAT population 
+## [StatKey](https://www.lock5stat.com/StatKey/) – Verbal SAT: What proportion of people score above 650?
 
 &lt;center&gt;
 &lt;img src="images/day14-2.png" width="70%" height="50%"&gt; &lt;br&gt;
+&lt;/center&gt;
+
+
+--
+
+&lt;center&gt;
+&lt;div style="position: absolute; top: 30%; left: 50%;"&gt;
+&lt;span style="content: '\2192'; font-size: 20px; color: #FFFFFF; text-align: center; white-space: pre-line;"&gt;
+  &lt;p&gt;&lt;strong&gt;The proportion of people that &lt;br&gt; score above 650 is 15.9%&lt;/strong&gt;&lt;/p&gt;
+&lt;/span&gt;
+&lt;/div&gt;
 &lt;/center&gt;
 
 ---
@@ -172,15 +195,20 @@ class: middle
 
 # Some observations!
 
-.bql[
-- About `\(16 \%\)` of individuals scored 650 or above.
+&lt;left&gt;
+&lt;img src="images/SAT_median.png" width="70%" height="80%"&gt; &lt;br&gt;
+&lt;/left&gt;
 
-- The `\(25^{th}\)` percentile score lies between 440 ( 2 SD below 580 ) and the median of 580 . 
-
-- Utilize `Statkey` to fine-tune the left-tail area to 0.25 for precise percentile calculation.
+--
 
 
-]
+&lt;center&gt;
+&lt;div style="position: absolute; top: 10%; left: 40%;"&gt;
+&lt;span style="content: '\2192'; font-size: 22px; color: #FFFFFF; text-align: center; white-space: pre-line;"&gt;
+  &lt;p&gt;&lt;strong&gt;The 25th percentile score lies between &lt;br&gt; 440 (2 SD below 580) and the median of 580&lt;/strong&gt;&lt;/p&gt;
+&lt;/span&gt;
+&lt;/div&gt;
+&lt;/center&gt;
 
 
 
@@ -188,16 +216,18 @@ class: middle
 
 # [StatKey](https://www.lock5stat.com/StatKey/) – Verbal SAT scores
 
-&lt;center&gt;
-&lt;img src="images/day14-3.png" width="50%" height="50%"&gt; &lt;br&gt;
-&lt;/center&gt;
+&lt;left&gt;
+&lt;img src="images/day14-3.png" width="55%" height="60%"&gt; &lt;br&gt;
+&lt;/left&gt;
+
+--
 
 &lt;center&gt;
-&lt;div style="position: absolute; top: 20%; left: 70%;"&gt;
+&lt;div style="position: absolute; top: 20%; left: 50%;"&gt;
 &lt;span style="content: '\2192'; font-size: 24px; color: #FF00FF; text-align: center; white-space: pre-line;"&gt;
   &lt;p&gt;The 25th percentile is 533.&lt;/p&gt;
 &lt;p&gt;About 75% of people in the population score above 533.&lt;/p&gt;
-
+&lt;p&gt;About 25% of people in the population score below 533.&lt;/p&gt;
 
 &lt;/span&gt;
 &lt;/div&gt;
@@ -214,6 +244,7 @@ class: middle
 
 
 ```r
+# 1 - left-tail-area
 1 - pnorm(650, 580,70)
 [1] 0.1586553
 ```
@@ -230,6 +261,7 @@ class: middle
 
 
 ```r
+# right-tail-area
 pnorm(650, 580,70, lower.tail = FALSE)
 [1] 0.1586553
 ```
@@ -243,6 +275,7 @@ pnorm(650, 580,70, lower.tail = FALSE)
 
 
 ```r
+# qnorm(left-quantile, mean, sd)
 qnorm(.25,580,70)
 [1] 532.7857
 ```
@@ -253,6 +286,7 @@ qnorm(.25,580,70)
 
 
 ```r
+# qnorm(left-quantile, mean, sd)
 qnorm(.75,580,70)
 [1] 627.2143
 ```
@@ -455,14 +489,14 @@ class: action
 .pull-right-60[
 &lt;br&gt;
 .bql[
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 
 ]
 
-<div class="countdown" id="timer_74db331b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_a1a4a9af" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
